# self-built-agent

./: .gitignore  pyproject.toml
builder/: factory.py  keys.py  paths.py  release.py
factory/: config.yaml.tmpl  soul.txt
factory/plugins/no-disk-destruction/: __init__.py  plugin.yaml
installer/: setup.iss
installer/cmd/: 小助手.cmd  小助手修复.cmd  小助手更新.cmd
tests/: conftest.py  test_factory.py  test_factory_state.py  test_guardrails.py  test_launcher.py  test_no_disk_destruction_plugin.py  test_recover.py  test_release.py  test_updater.py
tools/: factory_state.py  launcher.py  recover.py  updater.py
