[project]
name = "xiaozhushou"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
# `uv run pytest` invokes the pytest console-script entry point, which does
# NOT add the current working directory to sys.path (unlike `python -m
# pytest`). Without this, top-level packages like `builder` and `tools`
# are unimportable from tests. `pythonpath = ["."]` makes `uv run pytest`
# behave the same as `uv run python -m pytest` for in-repo imports.
pythonpath = ["."]
